syntax = "proto3";

package com.apihug.guide.proto.api.first.request;

import "extend/domain.proto";
import "swagger/annotations.proto";
option (hope.domain.kind) = BEAN;

message LoginRequest {
  option (hope.swagger.schema) = {
    json_schema: {
      description: "登录请求";
    };
  };

  string email = 1 [(hope.swagger.field) = {
    description: "邮箱";
    example: "jake@bigger.com"
    empty: {
      value: false
    };
    email: {
      value: true
    };
    mock: {
      nature: EMAIL
    }
  }];

  string password = 2 [(hope.swagger.field) = {
    description: "密码";
    example: "123456"
    empty: {
      value: false
    };
  }];

  bool remember_me = 3 [(hope.swagger.field) = {
    description: "记住我";
    example: "true"
  }];

  uint64 tenant_id = 4 [(hope.swagger.field) = {
    description: "租户ID-可选(非己租户则忽略)，前端cookie获取或用户设置,如无，直接进入个人工作间主页";
    example: "42"
  }];
}